Updated Fixing issue: On hover - "Open in Github" button is barely visible #2282 (#2288)

--- a/packages/ui/src/styles/typography/_mixins.scss
+++ b/packages/ui/src/styles/typography/_mixins.scss
@@ -180,6 +180,6 @@ $va-display-margins: (
 
   &:hover {
     color: var(--va-link-color);
-    filter: brightness(125%);
+    filter: brightness(115%);
   }
 }
